unblurred background image, lined up images to one fixed size

--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,15 @@ body {
   background-image: url(/images/unicorn-skin.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  image-rendering: pixelated;
+  
   
 }
 
 .not-found {
   background-position: 0 0, 0 10px, 0 0;
   background-blend-mode: hard-light;
+  image-rendering: pixelated;
 
 }
 
@@ -49,9 +52,9 @@ a {
 input {
   font-size: 1em;
   width: 100%;
-  background-color: #edeff0;
+  background-color: transparent;
   padding: 10px 15px;
-  border: 3px solid #d7dbdf;
+  border: 3px solid #f9f9f9;
   border-right: none;
   border-radius: 0.35em 0 0 0.35em;
   outline: none;
@@ -75,7 +78,7 @@ input {
 .main-nav .active,
 .main-nav a:hover,
 .search-form button:hover {
-  background-color: MediumTurquoise;
+  background-color: MediumVioletRed;
 }
 
 .photo-container ul {
@@ -95,6 +98,7 @@ input {
 
 .photo-container ul img {
   width: 100%;
+  height: 80%;
   transform: scale(1.25);
   transition: transform 1.25s;
 }
@@ -106,6 +110,10 @@ input {
 
 .photo-container .not-found {
   width: 100%;
+}
+
+.return {
+  
 }
 
 @media only screen and (max-width: 767px)  {
